--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	},
 	"dependencies": {
 		"express": "^4.18.2",
-		"helmet": "3.21.3"
+		"helmet": "3.21.3",
+		"yarn": "^1.22.19"
 	},
 	"keywords": [
 		"node",
